---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _189",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29, _30, _31, _32, _33, _34, _35, _36, _37, _38, _39, _40, _41, _42, _43, _44, _45, _46, _47, _48, _49, _50, _51, _52, _53, _54, _55, _56, _57, _58, _59, _60, _61, _62, _63]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) (-1, _32) (-1, _64) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _64) 0 ]], outputs: [_65]",
    "EXPR [ (1, _64, _65) (1, _66) -1 ]",
    "EXPR [ (1, _64, _66) 0 ]",
    "EXPR [ (1, _1) (-1, _33) (-1, _67) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _67) 0 ]], outputs: [_68]",
    "EXPR [ (1, _67, _68) (1, _69) -1 ]",
    "EXPR [ (1, _67, _69) 0 ]",
    "EXPR [ (1, _2) (-1, _34) (-1, _70) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _70) 0 ]], outputs: [_71]",
    "EXPR [ (1, _70, _71) (1, _72) -1 ]",
    "EXPR [ (1, _70, _72) 0 ]",
    "EXPR [ (1, _66, _69) (-1, _73) 0 ]",
    "EXPR [ (1, _3) (-1, _35) (-1, _74) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _74) 0 ]], outputs: [_75]",
    "EXPR [ (1, _74, _75) (1, _76) -1 ]",
    "EXPR [ (1, _74, _76) 0 ]",
    "EXPR [ (1, _72, _73) (-1, _77) 0 ]",
    "EXPR [ (1, _4) (-1, _36) (-1, _78) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _78) 0 ]], outputs: [_79]",
    "EXPR [ (1, _78, _79) (1, _80) -1 ]",
    "EXPR [ (1, _78, _80) 0 ]",
    "EXPR [ (1, _76, _77) (-1, _81) 0 ]",
    "EXPR [ (1, _5) (-1, _37) (-1, _82) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _82) 0 ]], outputs: [_83]",
    "EXPR [ (1, _82, _83) (1, _84) -1 ]",
    "EXPR [ (1, _82, _84) 0 ]",
    "EXPR [ (1, _80, _81) (-1, _85) 0 ]",
    "EXPR [ (1, _6) (-1, _38) (-1, _86) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _86) 0 ]], outputs: [_87]",
    "EXPR [ (1, _86, _87) (1, _88) -1 ]",
    "EXPR [ (1, _86, _88) 0 ]",
    "EXPR [ (1, _84, _85) (-1, _89) 0 ]",
    "EXPR [ (1, _7) (-1, _39) (-1, _90) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _90) 0 ]], outputs: [_91]",
    "EXPR [ (1, _90, _91) (1, _92) -1 ]",
    "EXPR [ (1, _90, _92) 0 ]",
    "EXPR [ (1, _88, _89) (-1, _93) 0 ]",
    "EXPR [ (1, _8) (-1, _40) (-1, _94) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _94) 0 ]], outputs: [_95]",
    "EXPR [ (1, _94, _95) (1, _96) -1 ]",
    "EXPR [ (1, _94, _96) 0 ]",
    "EXPR [ (1, _92, _93) (-1, _97) 0 ]",
    "EXPR [ (1, _9) (-1, _41) (-1, _98) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _98) 0 ]], outputs: [_99]",
    "EXPR [ (1, _98, _99) (1, _100) -1 ]",
    "EXPR [ (1, _98, _100) 0 ]",
    "EXPR [ (1, _96, _97) (-1, _101) 0 ]",
    "EXPR [ (1, _10) (-1, _42) (-1, _102) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _102) 0 ]], outputs: [_103]",
    "EXPR [ (1, _102, _103) (1, _104) -1 ]",
    "EXPR [ (1, _102, _104) 0 ]",
    "EXPR [ (1, _100, _101) (-1, _105) 0 ]",
    "EXPR [ (1, _11) (-1, _43) (-1, _106) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _106) 0 ]], outputs: [_107]",
    "EXPR [ (1, _106, _107) (1, _108) -1 ]",
    "EXPR [ (1, _106, _108) 0 ]",
    "EXPR [ (1, _104, _105) (-1, _109) 0 ]",
    "EXPR [ (1, _12) (-1, _44) (-1, _110) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _110) 0 ]], outputs: [_111]",
    "EXPR [ (1, _110, _111) (1, _112) -1 ]",
    "EXPR [ (1, _110, _112) 0 ]",
    "EXPR [ (1, _108, _109) (-1, _113) 0 ]",
    "EXPR [ (1, _13) (-1, _45) (-1, _114) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _114) 0 ]], outputs: [_115]",
    "EXPR [ (1, _114, _115) (1, _116) -1 ]",
    "EXPR [ (1, _114, _116) 0 ]",
    "EXPR [ (1, _112, _113) (-1, _117) 0 ]",
    "EXPR [ (1, _14) (-1, _46) (-1, _118) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _118) 0 ]], outputs: [_119]",
    "EXPR [ (1, _118, _119) (1, _120) -1 ]",
    "EXPR [ (1, _118, _120) 0 ]",
    "EXPR [ (1, _116, _117) (-1, _121) 0 ]",
    "EXPR [ (1, _15) (-1, _47) (-1, _122) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _122) 0 ]], outputs: [_123]",
    "EXPR [ (1, _122, _123) (1, _124) -1 ]",
    "EXPR [ (1, _122, _124) 0 ]",
    "EXPR [ (1, _120, _121) (-1, _125) 0 ]",
    "EXPR [ (1, _16) (-1, _48) (-1, _126) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _126) 0 ]], outputs: [_127]",
    "EXPR [ (1, _126, _127) (1, _128) -1 ]",
    "EXPR [ (1, _126, _128) 0 ]",
    "EXPR [ (1, _124, _125) (-1, _129) 0 ]",
    "EXPR [ (1, _17) (-1, _49) (-1, _130) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _130) 0 ]], outputs: [_131]",
    "EXPR [ (1, _130, _131) (1, _132) -1 ]",
    "EXPR [ (1, _130, _132) 0 ]",
    "EXPR [ (1, _128, _129) (-1, _133) 0 ]",
    "EXPR [ (1, _18) (-1, _50) (-1, _134) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _134) 0 ]], outputs: [_135]",
    "EXPR [ (1, _134, _135) (1, _136) -1 ]",
    "EXPR [ (1, _134, _136) 0 ]",
    "EXPR [ (1, _132, _133) (-1, _137) 0 ]",
    "EXPR [ (1, _19) (-1, _51) (-1, _138) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _138) 0 ]], outputs: [_139]",
    "EXPR [ (1, _138, _139) (1, _140) -1 ]",
    "EXPR [ (1, _138, _140) 0 ]",
    "EXPR [ (1, _136, _137) (-1, _141) 0 ]",
    "EXPR [ (1, _20) (-1, _52) (-1, _142) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _142) 0 ]], outputs: [_143]",
    "EXPR [ (1, _142, _143) (1, _144) -1 ]",
    "EXPR [ (1, _142, _144) 0 ]",
    "EXPR [ (1, _140, _141) (-1, _145) 0 ]",
    "EXPR [ (1, _21) (-1, _53) (-1, _146) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _146) 0 ]], outputs: [_147]",
    "EXPR [ (1, _146, _147) (1, _148) -1 ]",
    "EXPR [ (1, _146, _148) 0 ]",
    "EXPR [ (1, _144, _145) (-1, _149) 0 ]",
    "EXPR [ (1, _22) (-1, _54) (-1, _150) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _150) 0 ]], outputs: [_151]",
    "EXPR [ (1, _150, _151) (1, _152) -1 ]",
    "EXPR [ (1, _150, _152) 0 ]",
    "EXPR [ (1, _148, _149) (-1, _153) 0 ]",
    "EXPR [ (1, _23) (-1, _55) (-1, _154) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _154) 0 ]], outputs: [_155]",
    "EXPR [ (1, _154, _155) (1, _156) -1 ]",
    "EXPR [ (1, _154, _156) 0 ]",
    "EXPR [ (1, _152, _153) (-1, _157) 0 ]",
    "EXPR [ (1, _24) (-1, _56) (-1, _158) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _158) 0 ]], outputs: [_159]",
    "EXPR [ (1, _158, _159) (1, _160) -1 ]",
    "EXPR [ (1, _158, _160) 0 ]",
    "EXPR [ (1, _156, _157) (-1, _161) 0 ]",
    "EXPR [ (1, _25) (-1, _57) (-1, _162) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _162) 0 ]], outputs: [_163]",
    "EXPR [ (1, _162, _163) (1, _164) -1 ]",
    "EXPR [ (1, _162, _164) 0 ]",
    "EXPR [ (1, _160, _161) (-1, _165) 0 ]",
    "EXPR [ (1, _26) (-1, _58) (-1, _166) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _166) 0 ]], outputs: [_167]",
    "EXPR [ (1, _166, _167) (1, _168) -1 ]",
    "EXPR [ (1, _166, _168) 0 ]",
    "EXPR [ (1, _164, _165) (-1, _169) 0 ]",
    "EXPR [ (1, _27) (-1, _59) (-1, _170) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _170) 0 ]], outputs: [_171]",
    "EXPR [ (1, _170, _171) (1, _172) -1 ]",
    "EXPR [ (1, _170, _172) 0 ]",
    "EXPR [ (1, _168, _169) (-1, _173) 0 ]",
    "EXPR [ (1, _28) (-1, _60) (-1, _174) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _174) 0 ]], outputs: [_175]",
    "EXPR [ (1, _174, _175) (1, _176) -1 ]",
    "EXPR [ (1, _174, _176) 0 ]",
    "EXPR [ (1, _172, _173) (-1, _177) 0 ]",
    "EXPR [ (1, _29) (-1, _61) (-1, _178) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _178) 0 ]], outputs: [_179]",
    "EXPR [ (1, _178, _179) (1, _180) -1 ]",
    "EXPR [ (1, _178, _180) 0 ]",
    "EXPR [ (1, _176, _177) (-1, _181) 0 ]",
    "EXPR [ (1, _30) (-1, _62) (-1, _182) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _182) 0 ]], outputs: [_183]",
    "EXPR [ (1, _182, _183) (1, _184) -1 ]",
    "EXPR [ (1, _182, _184) 0 ]",
    "EXPR [ (1, _180, _181) (-1, _185) 0 ]",
    "EXPR [ (1, _31) (-1, _63) (-1, _186) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _186) 0 ]], outputs: [_187]",
    "EXPR [ (1, _186, _187) (1, _188) -1 ]",
    "EXPR [ (1, _186, _188) 0 ]",
    "EXPR [ (1, _184, _185) (-1, _189) 0 ]",
    "EXPR [ (1, _188, _189) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
